@@ -1,6 +1,7 @@
 0.1.8 (unreleased)
 =====
 * Remove -ansi flag in order to be compatible with OCaml 4.04.
+* Remove lpx_main from oldapi since glp_main has been removed in glpk.
 
 0.1.7 (2014-07-31)
 =====
